create logic and convert array characters to dashes, convert array back to string and display

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   <body>
       <div class="container">
         <h1>Wheel of Fortune</h1>
-        <form>
-          <div class="form-group">
-          <label for="userSentence">Please enter a sentence!</label>
-          <input class="form-control" id="userSentence" type="text">
-          </div>
-          <button class="btn" type="submit">Submit</button>
-        </form>
+        <div class="well" id="input">
+          <form>
+            <div class="form-group" >
+            <label for="userSentence">Please enter a sentence!</label>
+            <input class="form-control" id="userSentence" type="text">
+            </div>
+            <button class="btn" type="submit">Submit</button>
+          </form>
+        </div>
+        <div class="well "id="output">
+          <button type="button" class="btn" id="restart">Again!</button>
+        </div>
       </div>
   </body>
 </html>
